# M1-projet-python

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
docs/: algorithm.md
notebooks/: example_problem.ipynb
src/consulting_scheduler/: __init__.py  app.py  cli.py  models.py  solver.py
tests/: test_app.py  test_cli.py  test_models.py  test_solver.py
